<resources>
    <string name="app_name">HeroCycle</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Welcome">WELCOME</string>
    <string name="Hello">Hello, User</string>
    <string name="Hero">Let\'s be a hero today</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="userpicture">userPicture</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="registerNow">Not a member? Register now</string>
    <string name="eye_close">Eye close</string>
    <string name="sign_up">Sign Up</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="handshake_illustration">handshake illustration</string>
    <string name="Continue">Continue</string>
    <string name="mobile">Mobile</string>
    <string name="by_signing_up_you_re_agree_to_our">By signing up, you\'re agree to our</string>
    <string name="terms_conditions_and_privacy_policy">Terms, Conditions and Privacy Policy</string>
    <string name="us_herocycle_recyling_application_so_whenever_you_see">Us - HeroCycle, recycling application. So whenever you see</string>
    <string name="log_in">LOG IN</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="version_3_0_1">Version 3.0.1</string>
    <string name="these_terms_and_conditions_set_out_the_agreement_between">These Terms and Conditions set out the agreement between:</string>
    <string name="you_know_who_we_re_referring_to">you know who we\'re referring to.</string>
    <string name="in_nutshell">In nutshell:</string>
    <string name="title_activity_news1">News1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_news2">news2</string>
    <string name="deforestation">Deforestation</string>
    <string name="you_the_person_we_opened_account_for_n_nus_herocycle_recyling_applications_so_whenever_you_see_we_us_or_our_you_know_who_we_referring_to">You - The person we opened account for \n\nUs - Herocycle, recyling applications. So whenever you see We, us or our. You know who we referring to</string>
    <string name="we_care_about_your_privacy_and_we_always_want_to_be_transparent_about_how_herocycle_handles_your_data_n_nyour_data_is_not_our_business_we_only_collect_your_personal_data_that_s_essential_to_do_the_recycling_delivery_we_own_herocycle_but_everything_you_put_in_it_is_100_your_own_we_ll_never_share_it_with_3rd_parties_without_your_express_permission">We care about your privacy, and we always want to be transparent about how HeroCycle handles your data. \n\nYour data is not our business. We only collect your personal data that\'s essential to do the recycling delivery. We own HeroCycle, but everything you put in it is 100% your own. We\'ll never share it with 3rd parties without your express permission</string>
    <string name="security">security</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>