<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Account">


    <TextView
        android:id="@+id/upperyellowbar"
        android:layout_width="434dp"
        android:layout_height="28dp"
        android:background="#FFEB3B"
        android:shadowColor="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtprofile"
        android:layout_width="236dp"
        android:layout_height="66dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#0C0C0C"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="100dp"
        android:layout_height="98dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="261dp"
        android:contentDescription="@string/userpicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <EditText
        android:id="@+id/edtName"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="519dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:textColor="#5E5858"
        android:textColorHint="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtBirthdate"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="477dp"
        android:datePickerMode="spinner"
        android:ems="10"
        android:hint="Birthdate"
        android:inputType="date"
        android:textColor="#5E5858"
        android:textColorHint="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="415dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Home Address"
        android:inputType="textEmailAddress"
        android:textColor="#5E5858"
        android:textColorHint="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="371dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#5E5858"
        android:textColorHint="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTextPhone"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="363dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="320dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center_vertical"
        android:hint="Mobile"
        android:inputType="phone"
        android:textColorHint="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="261dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="361dp"
        android:contentDescription="back arrow"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <ImageView
        android:id="@+id/imgdiscussion"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="1dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/discussion" />


</androidx.constraintlayout.widget.ConstraintLayout>